force-app/main/default/objects/TrackIT__Matter__c/fields/TrackIT__Detailed_Information__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Detailed_Information__c</fullName>
    <label>Detailed Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>