force-app/main/default/objects/TrackIT__Matter__c/fields/TrackIT__Matter_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Matter_Closed_Date__c</fullName>
    <label>Matter Closed Date</label>
    <type>Date</type>
</CustomField>