force-app/main/default/objects/TrackIT__Matter__c/fields/TrackIT__Matter_Status__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Matter_Status__c</fullName>
    <label>Matter Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Matter_Status</valueSetName>
    </valueSet>
</CustomField>