force-app/main/default/objects/TrackIT__Matter__c/fields/TrackIT__Matter_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Matter_Type__c</fullName>
    <label>Matter Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>