force-app/main/default/objects/TrackIT__Matter__c/validationRules/TrackIT__Matter_Name_Change_After_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Matter_Name_Change_After_Creation</fullName>
    <active>true</active>
    <description>Prevents users from changing Matter Name after the name is initially entered.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorMessage>Matter Name cannot be changed after initial creation. Please contact your System Administrator to change the Matter Name after the initial creation.</errorMessage>
</ValidationRule>