force-app/main/default/objects/TrackIT__Matter__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Description__c</columns>
    <columns>TrackIT__Matter_Type__c</columns>
    <columns>TrackIT__Matter_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>